# file-exchanger

./: .gitignore  Dockerfile  LICENSE  README.md  client.py  main.py  pyproject.toml  server.py  test_file_exchanger.py
src/: Dockerfile  PROJECT.md  client.py  main.py  pyproject.toml  server.py
src/shared/: __init__.py  shared.py
src/tests/: test_cli.py  test_client_io.py  test_client_network.py  test_server_threaded.py  test_shared.py
