[project]
name = "file_exchanger"
version = "1.0.0"
description = "CLI tool for exchanging files between peers over sockets."
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }

dependencies = [
    "rich",
    "typer"
]

[project.optional-dependencies]
dev = [
    "ruff",
    "black",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff.lint]
select = ["E", "F", "I", "S"]
ignore = ["E203"]
exclude = ["build", "dist", ".venv"]